--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid ">
         <a class="navbar-brand" href="#">
-          <img src="/assets/img/logo.png" alt="" width="132" height="53">
+          <img src="./assets/img/logo.png" alt="" width="132" height="53">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
